<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/Theme.Avisio.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/box_activity_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_name_input_layout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/box_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/box_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLength="40"
                        />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <ImageView-->
<!--            android:id="@+id/box_icon_imageview"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:contentDescription="@string/create_box_icon_image_content_description"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/box_name_input_layout"-->
<!--            app:layout_constraintVertical_bias="0.05"-->
<!--            app:srcCompat="@drawable/dashboard_item_icon_default" />-->

<!--        <Button-->
<!--            android:id="@+id/select_icon_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/create_box_select_icon"-->
<!--            android:textColor="@color/primaryTextColor"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/box_icon_imageview"-->
<!--            app:layout_constraintVertical_bias="0.06"-->
<!--            app:shapeAppearance="@style/ShapeAppearance.avisio.SmallComponent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_box"
        android:contentDescription="@string/create_box_fab_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_check" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>