...
    <string name="box_activity_learn_fab">Lernen</string>
    <string name="box_activity_learn_fab_content_description">Karten in Box lernen</string>

    <string name="create_box_app_bar_title">Neue Box</string>
    <string name="create_box_fab_content_description">Box speichern</string>
    <string name="create_box_select_icon">Select icon</string>
    <string name="create_box_no_name_specified">Bitte trage einen Namen für die Box ein</string>
    <string name="create_box_icon_image_content_description">box icon</string>
    <string name="create_box_duplicate_name_dialog_title">Name vergeben</string>
    <string name="create_box_duplicate_name_dialog_message">Dieser Name wird bereits verwendet. Bitte wähle einen anderen Namen.</string>
    <string name="create_box_successful">Box wurde erfolgreich erstellt</string>
    <string name="edit_box_successful">Box wurde erfolgreich geändert</string>
    <string name="fab_cancel_workflow">Abbrechen</string>
...
    <string name="learn_activity_training_finished">Lernen beendet</string>

    <string name="learn_activity_result_wrong">Falsch</string>
    <string name="learn_activity_result_hard">Schwer</string>
    <string name="learn_activity_result_medium">Mittel</string>
    <string name="learn_activity_result_ok">Ok</string>
    <string name="learn_activity_result_easy">Einfach</string>

    <string name="search_dashboard_item_title">search box</string>
    <string name="finish_selection_menu_item">Auswahl beenden</string>
    <string name="delete_selected_dashboard_items">Löschen</string>
    <string name="move_selected_dashboard_items">Verschieben</string>
    <string name="edit_selected_dashboard_items">Bearbeiten</string>
...
