...
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer_flex_box"
            app:layout_constraintVertical_bias="0.03" />

        <CheckBox
            android:id="@+id/checkbox_create_new_card"
            android:layout_width="221dp"
            android:layout_height="49dp"
            android:text="@string/checkbox_create_new_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.325"
...

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_card"
            android:contentDescription="@string/create_card_fab_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_check"/>
...
