<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecase.training.activity.LearnBoxFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/learn_card_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.avisio.dashboard.usecase.training.activity.question.QuestionLearnFlexBox
            android:id="@+id/answer_edit_text2"
            android:layout_width="319dp"
            android:layout_height="73dp"
            android:layout_marginBottom="16dp"
            android:inputType="textNoSuggestions"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_input_layout"
            app:layout_constraintVertical_bias="0.5" />

        <com.avisio.dashboard.usecase.training.activity.question.QuestionLearnFlexBox
            android:id="@+id/question_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:id="@+id/answer_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/question_input_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.25">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/answer_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_card_answer_text_field_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/load_card_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/question_input_layout"
            app:layout_constraintVertical_bias="0.37" />

        <TextView
            android:id="@+id/standard_answer_text_view"
            android:layout_width="326dp"
            android:layout_height="72dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/question_input_layout"
            app:layout_constraintVertical_bias="0.25"/>

        <Button
            android:id="@+id/resolve_question_button"
            android:layout_width="326dp"
            android:layout_height="52dp"
            android:text="@string/learn_activity_resolve_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92" />

        <com.avisio.dashboard.usecase.training.activity.question.AnswerLearnFlexBox
            android:id="@+id/correct_answer_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/resolve_question_button"
            app:layout_constraintVertical_bias="0.25"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92" >
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>